--- a/public/bootstrap-4.5.0-dist/css/style.css
+++ b/public/bootstrap-4.5.0-dist/css/style.css
@@ -107,6 +107,11 @@
     height: 100vh;
   }
 
+  .home-page,
+  .msg-page {
+    margin-bottom: 0;
+  }
+
   .home-page {
     background-repeat: no-repeat;
     background-size: 1100px 640px;
